--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
 <html>
-  <h1>Jay</h1>
+  <head>
+    <title>Jay Portfolio</title>
+  </head>
+  <body>
+    <h1>Jay</h1>
+  </body>
 </html>
